fix shadow and add alt text to img

--- a/style_template.css
+++ b/style_template.css
@@ -4,6 +4,7 @@
 
 html * {
    font-family: 'Outfit', sans-serif;
-   font-size: 1em;
+   font-weight: 400;
+   font-size: 15px;
    color: #000;
 }
